Start work on password reset

--- a/todo.txt
+++ b/todo.txt
@@ -1,13 +1,14 @@
 - configuration
-- auth for admins (password reset)
+- password reset
+- redirect after login
 - add time slots
 - book time slot, token generation, update available time slots, personal data, prevent duplicate bookings
 - view bookings and personal data
 - edit booking via token per mail
 - edit bookings as admin
 - nice messages guiding through process
-- localization to english
 - deployment
 - CSS styling, message types
 - cookie banner
-- check if vec![] is necessary for messages
+- edit profile
+- update lastlogin
